[gd_scene load_steps=7 format=3 uid="uid://bidt742cwkyl2"]

[ext_resource type="Script" path="res://common/gui/dialog/common_dialog_item_texture_text.gd" id="1_h2w8a"]
[ext_resource type="PackedScene" uid="uid://bk3tiqne5kd2p" path="res://common/gui/common_bg.tscn" id="2_wp882"]
[ext_resource type="Texture2D" uid="uid://cjpdke4rcbesw" path="res://common/gui/dialog/res/down_arrow.webp" id="3_77cxb"]
[ext_resource type="Script" path="res://common/base/base_data_control.gd" id="4_4cwb2"]
[ext_resource type="Texture2D" uid="uid://dirtjpt8osaxv" path="res://common/gui/date/res/bg1.webp" id="5_v4g32"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("5_v4g32")
region_rect = Rect2(0, 0, 600, 241)

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_h2w8a")

[node name="bg" parent="." instance=ExtResource("2_wp882")]
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="down_arrow" type="TextureRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 24.0
offset_bottom = 17.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("3_77cxb")

[node name="marginContainer" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 24.0
offset_bottom = 20.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10
script = ExtResource("4_4cwb2")
styleBox = SubResource("1")

[node name="contentContainer" type="HBoxContainer" parent="Control/marginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[connection signal="on_click" from="." to="." method="_on_Control_on_click"]
[connection signal="on_click" from="bg" to="." method="_on_Control_on_click"]
